infrastructure/network.tf
/*
Erstellt Subnetze, um Services in einer VPC bereitzustellen
*/

resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "MainVPC"
  }
}

# # Internet Gateway für VPC
# resource "aws_internet_gateway" "main_igw" {
#   vpc_id = aws_vpc.main.id

#   tags = {
#     Name = "MainVPC-InternetGateway"
#   }
# }

resource "aws_subnet" "private_1" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.1.0/24"
  availability_zone       = "eu-central-1a"
  map_public_ip_on_launch = false

  tags = {
    Name = "Private Subnet 1"
  }
}

resource "aws_subnet" "private_2" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = "10.0.2.0/24"
  availability_zone       = "eu-central-1b"
  map_public_ip_on_launch = false

  tags = {
    Name = "Private Subnet 2"
  }
}

# Route Table für Public-Zugriff
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.main.id

  # route {
  #  cidr_block = "0.0.0.0/0"
  #  gateway_id = aws_internet_gateway.main_igw.id
  # }

  tags = {
    Name = "MainVPC-RouteTable"
  }
}

# Route Table Association für private_1 Subnetz
resource "aws_route_table_association" "private_1_assoc" {
  subnet_id      = aws_subnet.private_1.id
  route_table_id = aws_route_table.public_rt.id
}

# Route Table Association für private_2 Subnetz
resource "aws_route_table_association" "private_2_assoc" {
  subnet_id      = aws_subnet.private_2.id
  route_table_id = aws_route_table.public_rt.id
}
